fixed header title wrapping
Header title wrapping on the homepage on bigger resolutions in Firefox.
There was a problem of ems getting bigger on larger screens, which made the text wrap. Compensated with font-size so the title will remain within confines.

--- a/_sass/layout/_header.scss
+++ b/_sass/layout/_header.scss
@@ -139,6 +139,12 @@
       width: 460px;
       padding-top: 0;
     }
+    @include media($xx-large-screen) {
+      font-size: 1.5em;
+    }
+    @include media($xxx-large-screen) {
+      font-size: 1.3em;
+    }
   }
 }
 
